`fix: flash bang`

--- a/app/globals.css
+++ b/app/globals.css
@@ -122,6 +122,8 @@
   --shadow-xl: 0px 1px 2px 0px hsl(0 0% 0% / 0.18), 0px 8px 10px -1px hsl(0 0% 0% / 0.18);
   --shadow-2xl: 0px 1px 2px 0px hsl(0 0% 0% / 0.45);
   --tracking-normal: 0em;
+  --gradient-start: #ffffff;
+  --gradient-end: #e0f2fe;
 }
 
 .dark {
@@ -177,6 +179,8 @@
   --shadow-lg: 0px 1px 2px 0px hsl(0 0% 0% / 0.18), 0px 4px 6px -1px hsl(0 0% 0% / 0.18);
   --shadow-xl: 0px 1px 2px 0px hsl(0 0% 0% / 0.18), 0px 8px 10px -1px hsl(0 0% 0% / 0.18);
   --shadow-2xl: 0px 1px 2px 0px hsl(0 0% 0% / 0.45);
+  --gradient-start: #000000;
+  --gradient-end: #0d1a36;
 }
 
 @layer base {
